@@ -357,7 +357,7 @@
 			size="20" />
 
 		<field name="rights" type="textarea" label="JFIELD_META_RIGHTS_LABEL"
-			description="JFIELD_META_RIGHTS_DESC" required="" filter="string"
+			description="JFIELD_META_RIGHTS_DESC" required="false" filter="string"
 			cols="30" rows="2" />
 		<field name="xreference" type="text"
 			label="COM_CONTENT_FIELD_XREFERENCE_LABEL" description="COM_CONTENT_FIELD_XREFERENCE_DESC"
