@@ -194,7 +194,7 @@
 
 			<field name="rights" type="text"
 				label="JFIELD_META_RIGHTS_LABEL" description="JFIELD_META_RIGHTS_DESC"
-				required="" filter="string" cols="30" rows="2" />
+				required="false" filter="string" cols="30" rows="2" />
 		</fieldset>
 	</fields>
 </form>
